error_log_cmd.txt
file:///C:/Users/samet/Desktop/turkiyemCLI/src/services/tcmbService.js:3
import { getCache, setCache } from '../utils/cache.js';
         ^^^^^^^^
SyntaxError: The requested module '../utils/cache.js' does not provide an export named 'getCache'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:180:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:263:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:547:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:116:5)

Node.js v22.13.0
